[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "overpass"
version = "0.1.0"
description = "Satellite overpass extractor for fixed stations."
readme = "README.md"
requires-python = "~=3.12.0"
authors = [
    {name = "Your Name"}
]
dependencies = [
    "earthaccess",
    "xarray",
    "numpy",
    "pandas",
    "tqdm",
    "loguru",
    "netCDF4",
    "h5netcdf"
]

[tool.setuptools]
py-modules = ["overpass"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"